Final antes de entrega (con mapa y envio de correo)

--- a/Draco/About.html
+++ b/Draco/About.html
@@ -29,7 +29,7 @@
                   <a href="categoria.html">Categoría</a>
                   <a href="colecciones.html">Colecciones</a>
                   <a href="#">Contacto</a>
-                  
+
                 </div>
               </div>
 
@@ -189,7 +189,7 @@
         <div class="text-content">
           <h2>Fundación DRACO</h2>
           <p>
-            DRACO nació en el año 2015 con una visión clara: redefinir el calzado masculino mediante la combinación de artesanía, diseño vanguardista y elegancia atemporal. 
+            DRACO nació en el año 2015 con una visión clara: redefinir el calzado masculino mediante la combinación de artesanía, diseño vanguardista y elegancia atemporal.
             Fundada en Ciudad de México, DRACO se posicionó rápidamente como símbolo de distinción, apostando por materiales nobles y de gran calidad.
           </p>
         </div>
@@ -295,7 +295,7 @@
   <div class="footer-bottom">
     <p>© DRACO 2025 – Todos los derechos reservados</p>
     <div class="footer-location">
-      <a href="ubicar-tienda.html"><i class="fa-solid fa-location-dot"></i> ELIGE UNA TIENDA</a>
+      <a href="https://www.google.com/maps/d/edit?mid=1ng7s8Vt-bCeyRdHtiBTsKSIHXwYOQXM&usp=sharing" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-location-dot"></i>MOSTRAR SUCURSALES</a>
       <span><i class="fa-solid fa-globe"></i> LOCATION: LATINOAMÉRICA</span>
     </div>
   </div>
@@ -313,7 +313,11 @@
 <script type="module" src="js/auth.js"></script>
 <script type="module" src="js/loginUsuario.js"></script>
 <script type="module" src="js/registrarUsuario.js"></script>
-    <script type="module" src="js/verificarSesion.js"></script>
+<script type="module" src="js/verificarSesion.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script src="js/enviarCorreo.js"></script>
+
 
     <script>
       window.addEventListener('mouseover', initLandbot, { once: true });
