--- a/Draco/busqueda.html
+++ b/Draco/busqueda.html
@@ -33,7 +33,7 @@
                     <a href="categoria.html">Categoría</a>
                     <a href="colecciones.html">Colecciones</a>
                     <a href="#">Contacto</a>
-                    
+
                   </div>
                 </div>
 
@@ -206,7 +206,12 @@
     <script type="module" src="js/auth.js"></script>
     <script type="module" src="js/loginUsuario.js"></script>
     <script type="module" src="js/registrarUsuario.js"></script>
-        <script type="module" src="js/verificarSesion.js"></script>
+    <script type="module" src="js/verificarSesion.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script src="js/enviarCorreo.js"></script>
+
+
 
     <script>
       window.addEventListener('mouseover', initLandbot, { once: true });
@@ -279,7 +284,7 @@
   <div class="footer-bottom">
     <p>© DRACO 2025 – Todos los derechos reservados</p>
     <div class="footer-location">
-      <a href="ubicar-tienda.html"><i class="fa-solid fa-location-dot"></i> ELIGE UNA TIENDA</a>
+      <a href="https://www.google.com/maps/d/edit?mid=1ng7s8Vt-bCeyRdHtiBTsKSIHXwYOQXM&usp=sharing" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-location-dot"></i>MOSTRAR SUCURSALES</a>
       <span><i class="fa-solid fa-globe"></i> LOCATION: LATINOAMÉRICA</span>
     </div>
   </div>
