--- a/Draco/index.html
+++ b/Draco/index.html
@@ -33,7 +33,7 @@
                     <a href="categoria.html">Categoría</a>
                     <a href="colecciones.html">Colecciones</a>
                     <a href="#">Contacto</a>
-                    
+
                   </div>
                 </div>
 
@@ -209,7 +209,7 @@
       <div class="promo-text">
         <h1>DONDE CAMINA LA ELEGANCIA</h1>
         <p>Entre texturas nobles y líneas precisas, el paso se vuelve arte. El calzado no solo viste: susurra presencia, transforma el momento.</p>
-        <button>Dé el primer paso.</button>
+        <button><a href="colecciones.html">Vístase de presencia.</a></button>
       </div>
       <div class="promo-image">
         <img src="Media/dibujando.png" alt="Diseñador DRACO">
@@ -253,6 +253,10 @@
     <script type="module" src="js/loginUsuario.js"></script>
     <script type="module" src="js/registrarUsuario.js"></script>
     <script type="module" src="js/verificarSesion.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script src="js/enviarCorreo.js"></script>
+
 
 
     <script>
@@ -325,7 +329,7 @@
   <div class="footer-bottom">
     <p>© DRACO 2025 – Todos los derechos reservados</p>
     <div class="footer-location">
-      <a href="ubicar-tienda.html"><i class="fa-solid fa-location-dot"></i> ELIGE UNA TIENDA</a>
+      <a href="https://www.google.com/maps/d/edit?mid=1ng7s8Vt-bCeyRdHtiBTsKSIHXwYOQXM&usp=sharing" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-location-dot"></i>MOSTRAR SUCURSALES</a>
       <span><i class="fa-solid fa-globe"></i> LOCATION: LATINOAMÉRICA</span>
     </div>
   </div>
