--- a/Draco/monkstrap.html
+++ b/Draco/monkstrap.html
@@ -29,7 +29,7 @@
                     <a href="categoria.html">Categoría</a>
                     <a href="colecciones.html">Colecciones</a>
                     <a href="#">Contacto</a>
-                    
+
                   </div>
                 </div>
 
@@ -238,7 +238,7 @@
   <div class="footer-bottom">
     <p>© DRACO 2025 – Todos los derechos reservados</p>
     <div class="footer-location">
-      <a href="ubicar-tienda.html"><i class="fa-solid fa-location-dot"></i> ELIGE UNA TIENDA</a>
+      <a href="https://www.google.com/maps/d/edit?mid=1ng7s8Vt-bCeyRdHtiBTsKSIHXwYOQXM&usp=sharing" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-location-dot"></i>MOSTRAR SUCURSALES</a>
       <span><i class="fa-solid fa-globe"></i> LOCATION: LATINOAMÉRICA</span>
     </div>
   </div>
@@ -256,7 +256,11 @@
 <script type="module" src="js/auth.js"></script>
 <script type="module" src="js/loginUsuario.js"></script>
 <script type="module" src="js/registrarUsuario.js"></script>
-    <script type="module" src="js/verificarSesion.js"></script>
+<script type="module" src="js/verificarSesion.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script src="js/enviarCorreo.js"></script>
+
 
     <script>
       window.addEventListener('mouseover', initLandbot, { once: true });
